# tauri-plugins

./: .gitignore  AGENTS.md  README.md
tauri-plugin-net-watcher/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-net-watcher/docs/: design.md  implementation-plan.md
tauri-plugin-net-watcher/docs/superpowers/plans/: 2026-07-02-net-watcher-implementation.md
tauri-plugin-net-watcher/docs/superpowers/specs/: 2026-07-02-net-watcher-design.md
tauri-plugin-net-watcher/docs/verification/windows/: WIN-001-wifi-online-startup.md  WIN-002-ethernet-online-startup.md  WIN-003-offline-startup.md  WIN-004-no-targets-operation.md  WIN-005-wifi-disconnect.md  WIN-006-offline-to-ethernet.md  WIN-007-wifi-ethernet-handover.md  WIN-008-dhcp-address-renewal.md  WIN-009-rapid-network-flapping.md  WIN-010-sleep-resume.md  WIN-011-interface-metadata.md  WIN-012-network-event-contract.md  WIN-013-public-internet-verified.md  WIN-014-local-network-without-internet.md  WIN-015-captive-portal.md  WIN-016-public-failure-threshold-backoff.md  WIN-017-public-recovery.md  WIN-018-ncsi-active-probe-disagreement.md  WIN-019-public-probe-cache.md  WIN-020-multi-target-independence.md  WIN-021-http-status-reachability.md  WIN-022-target-dns-failure.md  WIN-023-target-tcp-timeout-refusal.md  WIN-024-target-tls-failure.md  WIN-025-target-quality-statistics.md  WIN-026-target-adaptive-schedule.md  WIN-027-target-suspend-resume.md  WIN-028-target-event-contract.md  WIN-029-bounded-target-concurrency.md  WIN-030-runtime-config-validation.md  WIN-031-watcher-lifecycle.md  WIN-032-dual-stack-address-fallback.md  WIN-033-ipv6-only-primary-interface.md  WIN-034-system-proxy-target.md  WIN-035-vpn-default-route.md  WIN-036-windows-ffi-buffer-safety.md  WIN-037-system-watcher-fallback.md  WIN-038-autostart-and-capability.md  WIN-039-mac-address-privacy.md  WIN-040-long-running-stability.md
tauri-plugin-net-watcher/examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
tauri-plugin-net-watcher/guest-js/: index.ts
tauri-plugin-net-watcher/permissions/: default.toml
tauri-plugin-net-watcher/permissions/autogenerated/: reference.md
tauri-plugin-net-watcher/permissions/schemas/: schema.json
tauri-plugin-net-watcher/src/: commands.rs  config.rs  desktop.rs  error.rs  internet.rs  lib.rs  mobile.rs  models.rs  network.rs  probe.rs  quality.rs  schedule.rs  snapshot.rs  state.rs  stats.rs  system_events.rs  watcher.rs
tauri-plugin-screen-capture/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  package.json
tauri-plugin-screen-capture/docs/: macos-overlay-acceptance.md  windows-capture-implementation.md
tauri-plugin-screen-capture/docs/handoffs/: 2026-07-24-tauri-screen-capture-handoff.md
tauri-plugin-screen-capture/docs/media-solutions/: 2026-07-12-cross-platform-gpu-media-pipeline-proposal.md  2026-07-12-windows-d3d11-gpu-scaling-staging-ring-adopted.md  2026-07-12-windows-encoder-transport-separation-adopted.md  2026-07-12-windows-latest-frame-encoder-worker-adopted.md  2026-07-12-windows-native-media-foundation-h264-adopted.md  2026-07-12-windows-stage-telemetry-adopted.md  2026-07-13-manual-capture-quality-presets-adopted.md  2026-07-13-windows-ordered-h264-sample-handoff-adopted.md  2026-07-13-windows-remb-low-latency-bitrate-control-adopted.md  2026-07-13-windows-static-frame-cadence-scene-refresh-adopted.md  2026-07-13-windows-transport-tokio-runtime-context-fix-adopted.md  2026-07-13-windows-zero-readback-d3d11-mf-h264-adopted.md  2026-07-16-windows-media-foundation-output-sample-lifetime-adopted.md  2026-07-20-dingtalk-window-resize-quality.md  2026-07-24-external-annotation-low-latency-design.md
tauri-plugin-screen-capture/docs/reviews/: 2026-05-21-windows-capture-review.md  2026-07-01-plugin-level-review.md  2026-07-01-screen-capture-performance-review.md
tauri-plugin-screen-capture/docs/windows-solutions/: 2026-07-12-event-driven-latest-frame-delivery.md  2026-07-12-openh264-simd-color-conversion.md  2026-07-12-overlay-16ms-polling-rejected.md  2026-07-12-overlay-1ms-polling-rejected.md  2026-07-12-overlay-batched-hide-rejected.md  2026-07-12-overlay-event-wakeup.md  2026-07-12-owned-window-overlay-lifecycle.md  2026-07-12-simd-hamming-scaling.md
tauri-plugin-screen-capture/examples/tauri-app/: README.md  index.html  jsconfig.json  package.json  vite.config.js
tauri-plugin-screen-capture/guest-js/: index.ts
tauri-plugin-screen-capture/permissions/: default.toml
tauri-plugin-screen-capture/permissions/autogenerated/: reference.md
tauri-plugin-screen-capture/permissions/schemas/: schema.json
tauri-plugin-screen-capture/scripts/: macos-overlay-order-probe.swift
tauri-plugin-screen-capture/src/: annotation.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  state.rs
tauri-plugin-screen-capture/src/annotation/: geometry.rs  history.rs  model.rs
tauri-plugin-screen-capture/src/capture/: dummy.rs  macos.rs  mod.rs  windows.rs
tauri-plugin-screen-capture/src/overlay/: mod.rs  windows.rs
tauri-plugin-screen-capture/src/pipeline/: frame.rs  mod.rs  stats.rs
tauri-plugin-screen-capture/src/publisher/: agora.rs  composite.rs  mod.rs  null.rs  webrtc.rs
tauri-plugin-screen-capture/src/sources/: filter.rs  mod.rs  thumbnails.rs
tauri-plugin-screen-capture/src/webrtc/: h264_annexb.rs  h264_encoder.rs  h264_encoder_macos.rs  h264_encoder_windows.rs  mod.rs  signaling.rs  track.rs
tauri-plugin-screen-capture/tests/: agora_publisher.rs  annotation-controller.mjs  annotation_contract.rs  annotation_geometry.rs  annotation_model.rs  guest-js-contract.ts  h264_annexb.rs  macos_annotation_compositor.rs  macos_capture_frame.rs  macos_encoder_worker.rs  macos_frame_scheduler.rs  macos_metal_surface.rs  macos_overlay_focus_probe.swift  macos_overlay_policy.rs  model_contract.rs  overlay_geometry.rs  pipeline.rs  publisher_composite.rs  publisher_contract.rs  session_state.rs  source_filter.rs  webrtc.rs  webrtc_loopback.rs  windows_capture_performance.rs  windows_encoder_performance.rs
(+112 files in other folders)
