[package]
name = "tauri-plugin-net-watcher"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-net-watcher"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
url = "2"
native-tls = "0.2"
tokio-native-tls = "0.3"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
