[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-screen-capture"

[features]
default = []
macos-screencapturekit = ["dep:screencapturekit"]

[dependencies]
tauri = { version = "2.11.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
apple-cf = { version = "0.2", features = ["cm", "cv"] }
bytes = "1"
media = { package = "webrtc-media", version = "0.17.1" }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "=3.0.0", optional = true }

[dependencies.webrtc]
version = "0.17"
default-features = false

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
