[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-screen-capture"

[features]
default = []
macos-screencapturekit = ["dep:screencapturekit", "screencapturekit/macos_14_0"]

[dependencies]
tauri = { version = "2.11.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
media = { package = "webrtc-media", version = "0.17.1" }
interceptor = "0.17.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-cf = { version = "0.2", features = ["cm", "cv"] }
screencapturekit = { version = "=3.0.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
openh264 = "0.6.5"
windows-capture = "2.0.0"
windows = { version = "0.62", features = [
  "Graphics_Capture",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Storage_Xps",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dependencies.webrtc]
version = "0.17"
default-features = false

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
