[package]
name = "tauri-plugin-screen-capture"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-screen-capture"

[features]
default = []
macos-screencapturekit = ["dep:screencapturekit", "screencapturekit/macos_14_0"]

[dependencies]
tauri = { version = "2.11.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
media = { package = "webrtc-media", version = "0.17.1" }
interceptor = "0.17.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-cf = { version = "0.2", features = ["cm", "cv"] }
screencapturekit = { version = "=3.0.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
fast_image_resize = { version = "=5.1.2", features = ["only_u8x4"] }
openh264 = "0.6.5"
yuvutils-rs = "=0.3.2"
windows-capture = "2.0.0"
windows = { version = "0.62", features = [
  "Graphics_Capture",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Media_MediaFoundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_Storage_Xps",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dependencies.webrtc]
version = "0.17"
default-features = false

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# The real-time pixel kernels are dependency crates. Keeping them unoptimized in
# debug builds makes the example appear to lose capture frames even though WGC is
# healthy, so optimize only those kernels while preserving debuginfo for this crate.
[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.dev.package.yuvutils-rs]
opt-level = 3

[profile.dev.package.openh264]
opt-level = 3
