[package]
name = "screen-capture-lab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", default-features = false, features = [] }

[dependencies]
async-trait = "0.1"
tauri = { version = "2.11.2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-screen-capture = { path = "../../../", features = ["macos-screencapturekit"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-screen-capture = { path = "../../../" }

[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.dev.package.yuvutils-rs]
opt-level = 3

[profile.dev.package.openh264]
opt-level = 3
